# models/certificates.js
@@ -1,21 +1,16 @@
-const mongoose = require('mongoose');
-const Schema = mongoose.Schema;
-
-const certificateSchema = new Schema({
-  
+const Certificate = (mongoose) => {
+    const certificateSchema = mongoose.Schema({ 
         name: {
             type:String,
-            required: true
         },
         status:{
             type:String,
-            required: true
          },
          year: {
             type:String,
-            required: true
          }
 });
+return mongoose.model('certificates',certificateSchema);
+};
 
-const Certificate = mongoose.model('certificate',certificateSchema);
 module.exports = Certificate;
